<resources>
    <string name="app_name">Smart Tracker</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="registration">Registration</string>
    <string name="main_screen">Main Screen</string>
    <string name="goals">Goals</string>
    <string name="habits">Habits</string>
    <string name="rating">Rating</string>
    <string name="settings">Settings</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="back_button">Back Button</string>
    <string name="nickname">Name</string>
    <string name="verify_password">Verify password</string>
    <string name="loading">Loading</string>
    <string name="invalid_login_password">Invalid login and/or password</string>
    <string name="verify_password_error">Passwords mismatch</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="habit_pluses">Pluses of habit</string>
    <string name="habit_minuses">Minuses of habit</string>
    <string name="save_changes_question">Save changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="habit_info_pattern">Reputation : %1$d, %2$s</string>
    <string name="public_habit">public</string>
    <string name="private_habit">private</string>
    <string name="mute_habit">Mute habit</string>
    <string name="unmute_habit">Unmute habit</string>
    <string name="habit">Habit</string>
    <string name="type_of_habit">Type of habit</string>
    <string name="delete_habit_question">Delete habit?</string>
    <string name="delete">Delete</string>
    <string name="add_new_plus">Add new plus of habit</string>
    <string name="add_new_minus">Add new minus of habit</string>
    <string name="new_plus">New plus</string>
    <string name="new_minus">New minus</string>
    <string name="connection_error">Connection error occurred</string>
    <string name="login_exists_error">User with this login already exists</string>
    <string name="registration_completed">Registration completed</string>
    <string name="login_completed">Login completed</string>
    <string name="notifications">Notifications</string>
    <string name="monday">Mo</string>
    <string name="tuesday">Tu</string>
    <string name="wednesday">We</string>
    <string name="thursday">Th</string>
    <string name="friday">Fr</string>
    <string name="saturday">Sa</string>
    <string name="sunday">Su</string>
    <string name="new_habit">New habit</string>
    <string name="you">You</string>
    <string name="habit_completed">Habit completed!</string>
    <string name="update_text">This version of the app is outdated, please visit https://vk.com/greamteamdev \nfor more information</string>
    <string name="habit_notification_text">It\'s time to make your habit done</string>
    <string name="pluses">Pluses</string>
    <string name="minuses">Minuses</string>
    <string name="reputation_pattern">Reputation : %1$d</string>
    <string name="profile">Profile</string>
    <string name="rating_pattern">Rating : %1$d</string>
    <string name="rating_place_pattern">Rating place : %1$d</string>
    <string name="no_description">No description</string>
    <string name="no_pluses">No pluses</string>
    <string name="no_minuses">No minuses</string>
    <string name="one_day_notification_error">You need to choose at least one day of notification</string>
    <string name="exit_account">Exit account</string>
    <string name="max_habits_error">You can\'t have more than 10 habits</string>
    <string name="vote_error">You\'ve already voted for this habit</string>
    <string name="edit_habit_error">You can edit name, description, notification days of habit only the once every 7 days</string>
    <string name="create_new_habit">Create new habit?</string>
    <string name="foreground_notification">Service is working…</string>
    <string name="copied_habit">Habit has been copied</string>
    <string name="user">User</string>
    <string name="hello_user_pattern">Hello %1$s!</string>
    <string name="top_20">Top 20</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="screen_in_development">Screen is in development</string>
    <string name="best_habits">Best habits</string>
    <string name="newest_habits">Newest habits</string>
    <string name="vote_for_your_habit_error">You can\'t vote for your own habit</string>
    <string-array name="types_of_leader_board">
        <item>Best Habits</item>
        <item>Newest Habits</item>
    </string-array>
</resources>
