<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/HabitToolBar"
            layout="@layout/toolbar" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/HabitName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:imeOptions="actionDone"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/HabitDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:maxLines="3" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/habit_pluses"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/HabitPlusesRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:overScrollMode="never" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/habit_minuses"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/HabitMinusesRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:overScrollMode="never" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/notifications"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        <TimePicker
            android:id="@+id/NotificationTimePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/HabitMondayButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/monday"
                android:textOn="@string/monday" />

            <ToggleButton
                android:id="@+id/HabitTuesdayButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/tuesday"
                android:textOn="@string/tuesday" />

            <ToggleButton
                android:id="@+id/HabitWednesdayButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/wednesday"
                android:textOn="@string/wednesday" />

            <ToggleButton
                android:id="@+id/HabitThursdayButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/thursday"
                android:textOn="@string/thursday" />

            <ToggleButton
                android:id="@+id/HabitFridayButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/friday"
                android:textOn="@string/friday" />

            <ToggleButton
                android:id="@+id/HabitSaturdayButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/saturday"
                android:textOn="@string/saturday" />

            <ToggleButton
                android:id="@+id/HabitSundayButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/sunday"
                android:textOn="@string/sunday" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/type_of_habit"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />


        <RadioGroup
            android:id="@+id/HabitTypeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp">

            <RadioButton
                android:id="@+id/HabitPublicButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/public_habit" />

            <RadioButton
                android:id="@+id/HabitPrivateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/private_habit" />

        </RadioGroup>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>