<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize = "32sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id = "@+id/EmailSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint = "@string/email"
                android:inputType="text|textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginBottom="16dp"
            style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id = "@+id/PasswordSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint = "@string/password"
                android:inputType="text|textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id = "@+id/SignInButton"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:text = "@string/sign_in"/>

        <Button
            android:id = "@+id/NavigationSignUpButton"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_gravity="center"
            android:text = "@string/sign_up"/>

</LinearLayout>